--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 
 body{
     font-family: 'League Gothic', sans-serif; 
-    background-color:rgb(12, 212, 79); 
-    color:#071a12
+    background-color:white 
+    color:black;
 } 
 h1{
     font-weight:lighter; 
