--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 
 body{
     font-family: 'League Gothic', sans-serif; 
-    background-color:white 
-    color:black;
+    background-color:green;
+    color:white;
 } 
 h1{
     font-weight:lighter; 
