--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,17 @@ body{
     background-color:green;
     color:white;
 } 
-h1{
+h1{ 
     font-weight:lighter; 
 } 
+input[type=submit]{
+background-color:red;
+border: 15px; 
+color: azure; 
+padding: 15px; 
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+}
+
