--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,10 @@ display: inline-block;
 font-size: 16px;
 }
 
+@media only screen and (max-width: 100px) {
+    body { 
+      background-color: lightblue;
+    }
+  }
+
+
