--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
 
 body{
     font-family: 'League Gothic', sans-serif; 
-    background-color:green;
-    color:rgb(6, 46, 6); 
+    background-color:rgb(121, 192, 121);
+    color:rgb(5, 7, 5); 
     font-size: 20px;
 } 
 h1{ 
     font-weight:lighter; 
-    color:azure; 
+    color:rgb(100, 23, 4); 
 } 
 input[type=submit]{
 background-color:red;
